0.06

0.05 2021-05-29T17:36:08+02:00
 - Add AC1035.
 - Fix releases against libredwg.
 - Rewrite RT to github.
 - Update copyright years.

0.04 2020-05-16T16:06:13+02:00
 - Add AC1.3 version.
 - Add AC1013 version.
 - Add DESCRIPTION section to doc.
 - Improve doc.
 - Split newer AutoCAD versions to each release.

0.03 2020-04-06T11:57:03+02:00
 - Add SEE ALSO section to doc.

0.02 2020-04-05T14:43:59+02:00
 - Add list_of_acad_identifiers_real() method.
 - Fix word in doc.

0.01 2020-04-05T13:33:01+02:00
 - First version.